# NESulator

./: .gitignore  .nestest.log.swp  .trimed.log.swp  CMakeLists.txt  LICENSE  README.md
GUItulator/: App.xaml  App.xaml.cs  CWrapper.cs  GUItulator.csproj  Program.cs  ViewLocator.cs
GUItulator/Controls/: FrameControl.cs
GUItulator/Utils/: BitmapUtils.cs  FPSLoopManager.cs
GUItulator/ViewModels/: FPSWindowBase.cs  HexEditorWindowViewModel.cs  MainWindowViewModel.cs  NametableWindowViewModel.cs  PatterntableWindowViewModel.cs  ViewModelBase.cs
GUItulator/Views/: HexEditorWindow.xaml  HexEditorWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  NametableWindow.xaml  NametableWindow.xaml.cs  PatterntableWindow.xaml  PatterntableWindow.xaml.cs
gui_runtime/: CMakeLists.txt  FindPython.cmake  Startup.py  startup.c
lib/: FindSDL2.cmake
lib/SDL2/include/: SDL_cpuinfo.h
scripts/: trim.sh
src/: CMakeLists.txt  FindLua.cmake  FindPython.cmake  Utils.c  Utils.h  apu.c  apu.h  cpu.c  cpu.c.orig  cpu.h  cpu.h.orig  log.c  log.h  main.c  main.h  main.py  memory.c  memory.h  nes.c  nes.h  ppu.backup  ppu.c  ppu.h  rom.c  rom.h  types.h
src/gui/: GUIEvents.py  GUIFormBuilder.fbp  GUIStartup.py  MainWindow.py  gui.c  gui.cpp  gui.h  gui_events.h  gui_nametable.c  gui_nametable.h  gui_patterntable.c  gui_patterntable.h  guicython.pyx  hello_world.py  lua_gui_main.c  mainWindow.c  mainWindow.h  nametableViewer.c  nametableViewer.h  patterntableViewer.c  patterntableViewer.h  python_gui_wrapper.c  python_gui_wrapper.h  setup.py
src/gui/Lua_wrapper/: gui.c  gui.h  lua_gui.c  lua_gui.h  lua_gui_main.c
src/gui/imgui/: imgui_impl_sdl.cpp
src/gui/impl/: GUIStartup.py  MainWindow.py
src/gui/lua/impl/: BaseWindow.lua  MainWindow.lua  MainWindow.xrc  NametableWindow.lua  NametableWindow.xrc  PatternatbleWindow.lua  PatterntableWindow.lua  PatterntableWindow.xrc  Utils.lua
src/mappers/: CNROM.c  CNROM.h  NROM.c  NROM.h
src/utils/: Utils.c  Utils.h  colour_palette.c  colour_palette.h  log.c  log.h  ppu_utils.c  ppu_utils.h
test/: CMakeLists.txt  TestCPU.c  TestCPU.h  TestMain.c  TestMemory.c  TestMemory.h  TestingTests.c
